Fixed text overflow

--- a/client/src/components/RightWidget/MentionEditor/MentionEditor.module.css
+++ b/client/src/components/RightWidget/MentionEditor/MentionEditor.module.css
@@ -22,3 +22,7 @@
   background-color: var(--mantine-color-dark-6) !important;
   padding: 5px;
 }
+
+.linkText {
+  max-width: 190px;
+}
